--- a/src/Views/ly2.fxml
+++ b/src/Views/ly2.fxml
@@ -11,127 +11,135 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorPane" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
-   <children>
-      <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <children>
-            <HBox alignment="CENTER">
-               <children>
-                  <HBox alignment="CENTER_LEFT">
-                     <children>
-                        <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause">
-                           <graphic>
-                              <ImageView fitHeight="50.0" fitWidth="50.0">
-                                 <image>
-                                    <Image url="@icon/icons8_pause_100px_1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic></Button>
-                     </children>
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin>
-                  </HBox>
-                  <HBox alignment="TOP_CENTER">
-                     <children>
-                        <ImageView fitHeight="141.0" fitWidth="141.0">
-                           <image>
-                              <Image url="@icon/air.com.thumbspire.get13.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                  </HBox>
-                  <HBox alignment="CENTER_RIGHT">
-                     <children>
-                        <VBox prefHeight="200.0">
-                           <children>
-                              <HBox prefHeight="100.0" prefWidth="200.0">
-                                 <children>
-                                    <ImageView fitHeight="50.0" fitWidth="50.0">
-                                       <image>
-                                          <Image url="@icon/icons8_money_100px_1.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Label fx:id="moneyField" text="moneyField" textFill="WHITE">
-                                       <opaqueInsets>
-                                          <Insets />
-                                       </opaqueInsets>
-                                       <HBox.margin>
-                                          <Insets left="5.0" />
-                                       </HBox.margin></Label>
-                                 </children>
-                              </HBox>
-                              <HBox prefHeight="100.0" prefWidth="200.0">
-                                 <children>
-                                    <ImageView fitHeight="50.0" fitWidth="50.0">
-                                       <image>
-                                          <Image url="@icon/icons8_Long_Arrow_Up_100px_1.png" />
-                                       </image>
-                                    </ImageView>
-                                    <Label fx:id="levelField" text="levelField" textFill="WHITE">
-                                       <HBox.margin>
-                                          <Insets left="5.0" />
-                                       </HBox.margin></Label>
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin>
-                  </HBox>
-               </children>
-               <VBox.margin>
-                  <Insets top="60.0" />
-               </VBox.margin>
-            </HBox>
-            <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <VBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </GridPane>
-            <HBox alignment="CENTER">
-               <children>
-                  <ToggleButton fx:id="bomb" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets right="150.0" />
-                     </HBox.margin>
-                     <graphic>
-                        <ImageView fitHeight="50.0" fitWidth="50.0">
-                           <image>
-                              <Image url="@icon/icons8_flash_bang_48px_1.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </ToggleButton>
-                  <Button fx:id="undo" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <graphic>
-                        <ImageView fitHeight="50.0" fitWidth="50.0">
-                           <image>
-                              <Image url="@icon/icons8_undo_100px.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </children>
+<AnchorPane fx:id="anchorPane" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
+    <children>
+        <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
+              AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+            <children>
+                <HBox alignment="CENTER">
+                    <children>
+                        <HBox alignment="CENTER_LEFT">
+                            <children>
+                                <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause">
+                                    <graphic>
+                                        <ImageView fitHeight="50.0" fitWidth="50.0">
+                                            <image>
+                                                <Image url="@icon/icons8_pause_100px_1.png"/>
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </children>
+                            <HBox.margin>
+                                <Insets left="20.0"/>
+                            </HBox.margin>
+                        </HBox>
+                        <HBox alignment="TOP_CENTER">
+                            <children>
+                                <ImageView fitHeight="141.0" fitWidth="141.0">
+                                    <image>
+                                        <Image url="@icon/air.com.thumbspire.get13.png"/>
+                                    </image>
+                                </ImageView>
+                            </children>
+                            <HBox.margin>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                            </HBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT">
+                            <children>
+                                <VBox prefHeight="200.0">
+                                    <children>
+                                        <HBox prefHeight="100.0" prefWidth="200.0">
+                                            <children>
+                                                <ImageView fitHeight="50.0" fitWidth="50.0">
+                                                    <image>
+                                                        <Image url="@icon/icons8_money_100px_1.png"/>
+                                                    </image>
+                                                </ImageView>
+                                                <Label fx:id="moneyField" text="moneyField" textFill="WHITE">
+                                                    <opaqueInsets>
+                                                        <Insets/>
+                                                    </opaqueInsets>
+                                                    <HBox.margin>
+                                                        <Insets left="5.0"/>
+                                                    </HBox.margin>
+                                                </Label>
+                                            </children>
+                                        </HBox>
+                                        <HBox prefHeight="100.0" prefWidth="200.0">
+                                            <children>
+                                                <ImageView fitHeight="50.0" fitWidth="50.0">
+                                                    <image>
+                                                        <Image url="@icon/icons8_Long_Arrow_Up_100px_1.png"/>
+                                                    </image>
+                                                </ImageView>
+                                                <Label fx:id="levelField" text="levelField" textFill="WHITE">
+                                                    <HBox.margin>
+                                                        <Insets left="5.0"/>
+                                                    </HBox.margin>
+                                                </Label>
+                                            </children>
+                                        </HBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <HBox.margin>
+                                <Insets right="20.0"/>
+                            </HBox.margin>
+                        </HBox>
+                    </children>
+                    <VBox.margin>
+                        <Insets top="60.0"/>
+                    </VBox.margin>
+                </HBox>
+                <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
+                          maxWidth="1.7976931348623157E308">
+                    <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                    </VBox.margin>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </GridPane>
+                <HBox alignment="CENTER">
+                    <children>
+                        <ToggleButton fx:id="bomb" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false"
+                                      prefHeight="50.0" prefWidth="100.0">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <HBox.margin>
+                                <Insets right="150.0"/>
+                            </HBox.margin>
+                            <graphic>
+                                <ImageView fitHeight="50.0" fitWidth="50.0">
+                                    <image>
+                                        <Image url="@icon/icons8_flash_bang_48px_1.png"/>
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </ToggleButton>
+                        <Button fx:id="undo" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false"
+                                prefHeight="50.0" prefWidth="100.0">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <graphic>
+                                <ImageView fitHeight="50.0" fitWidth="50.0">
+                                    <image>
+                                        <Image url="@icon/icons8_undo_100px.png"/>
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </Button>
+                    </children>
+                </HBox>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
