--- a/src/Views/ly4.fxml
+++ b/src/Views/ly4.fxml
@@ -11,102 +11,111 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerEndGame">
-   <children>
-      <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-         <children>
-            <Label fx:id="marvelous" text="GAME OVER" textFill="RED">
-               <VBox.margin>
-                  <Insets top="40.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="35.0" />
-               </font>
-            </Label>
-            <Label fx:id="titleScore" text="SCORE" textFill="RED">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="19.0" />
-               </font>
-               <graphic>
-                  <ImageView fitHeight="50.0" fitWidth="50.0">
-                     <image>
-                        <Image url="@icon/icons8_star_100px_1.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Label>
-            <Label fx:id="labelScore" alignment="TOP_CENTER" text="NUMBER" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-               <font>
-                  <Font size="13.0" />
-               </font></Label>
-            <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-               <VBox.margin>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </GridPane>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <HBox alignment="CENTER">
-                     <children>
-                        <Button fx:id="mainMenu" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" text="Main Menu">
-                           <opaqueInsets>
-                              <Insets bottom="30.0" />
-                           </opaqueInsets>
-                           <graphic>
-                              <ImageView fitHeight="50.0" fitWidth="50.0">
-                                 <image>
-                                    <Image url="@icon/icons8_menu_2_100px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <Button fx:id="restart" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#restart" prefHeight="80.0" prefWidth="150.0" text="Restart">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <HBox.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </HBox.margin>
-                           <graphic>
-                              <ImageView fitHeight="50.0" fitWidth="50.0">
-                                 <image>
-                                    <Image url="@icon/icons8_restart_100px.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                     </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <Button fx:id="score" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#score" prefHeight="80.0" prefWidth="100.0" text="Score" textFill="WHITE">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <graphic>
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controller.ControllerEndGame">
+    <children>
+        <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"
+              AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+            <children>
+                <Label fx:id="marvelous" text="GAME OVER" textFill="RED">
+                    <VBox.margin>
+                        <Insets top="40.0"/>
+                    </VBox.margin>
+                    <font>
+                        <Font size="35.0"/>
+                    </font>
+                </Label>
+                <Label fx:id="titleScore" text="SCORE" textFill="RED">
+                    <VBox.margin>
+                        <Insets top="10.0"/>
+                    </VBox.margin>
+                    <font>
+                        <Font size="19.0"/>
+                    </font>
+                    <graphic>
                         <ImageView fitHeight="50.0" fitWidth="50.0">
-                           <image>
-                              <Image url="@icon/icons8_winner_document_100px.png" />
-                           </image>
+                            <image>
+                                <Image url="@icon/icons8_star_100px_1.png"/>
+                            </image>
                         </ImageView>
-                     </graphic>
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
-               </children>
-            </VBox>
-         </children>
-      </VBox>
-   </children>
+                    </graphic>
+                </Label>
+                <Label fx:id="labelScore" alignment="TOP_CENTER" text="NUMBER" textAlignment="CENTER" textFill="WHITE"
+                       wrapText="true">
+                    <font>
+                        <Font size="13.0"/>
+                    </font>
+                </Label>
+                <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
+                          maxWidth="1.7976931348623157E308">
+                    <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                    </VBox.margin>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </GridPane>
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                    <children>
+                        <HBox alignment="CENTER">
+                            <children>
+                                <Button fx:id="mainMenu" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false"
+                                        onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" text="Main Menu">
+                                    <opaqueInsets>
+                                        <Insets bottom="30.0"/>
+                                    </opaqueInsets>
+                                    <graphic>
+                                        <ImageView fitHeight="50.0" fitWidth="50.0">
+                                            <image>
+                                                <Image url="@icon/icons8_menu_2_100px.png"/>
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                                <Button fx:id="restart" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false"
+                                        onAction="#restart" prefHeight="80.0" prefWidth="150.0" text="Restart">
+                                    <opaqueInsets>
+                                        <Insets/>
+                                    </opaqueInsets>
+                                    <HBox.margin>
+                                        <Insets left="10.0" right="10.0"/>
+                                    </HBox.margin>
+                                    <graphic>
+                                        <ImageView fitHeight="50.0" fitWidth="50.0">
+                                            <image>
+                                                <Image url="@icon/icons8_restart_100px.png"/>
+                                            </image>
+                                        </ImageView>
+                                    </graphic>
+                                </Button>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="20.0"/>
+                            </VBox.margin>
+                        </HBox>
+                        <Button fx:id="score" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false"
+                                onAction="#score" prefHeight="80.0" prefWidth="100.0" text="Score" textFill="WHITE">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <graphic>
+                                <ImageView fitHeight="50.0" fitWidth="50.0">
+                                    <image>
+                                        <Image url="@icon/icons8_winner_document_100px.png"/>
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <VBox.margin>
+                                <Insets top="10.0"/>
+                            </VBox.margin>
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                        </Button>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
